# auto-search

./: .gitignore  README.md  config.yaml  pyproject.toml
autosearch/: cli.py  config.py  ui_config.py
backend/: pom.xml
backend/autosearch-core/: pom.xml
backend/autosearch-spring/: pom.xml
examples/health-workforce/: README.md  corpus-ui.json  test-queries.json
examples/health-workforce/results/: report-2026-04-23.html
examples/it-service-catalogue/: README.md  corpus-ui.json  corpus.json  test-queries.json
fine-tuning/: export_onnx.py  extract_corpus.sql  generate_pairs.py  precompute_embeddings.py  requirements.txt  train.py
fine-tuning/tests/: test_cli.py  test_config.py  test_generate.py  test_generate_pairs.py  test_precompute.py  test_ui_config.py
fine-tuning/tests/fixtures/: test-config.yaml
frontend/: index.html  package-lock.json  package.json
frontend/components/: DataItemHighlight.vue  SearchBar.vue  SearchResults.vue
frontend/e2e/: cleanup.sh  portability.sh
frontend/src/: App.vue  corpusConfig.js  main.js  router.js  store.js
frontend/tests/: DataItemHighlight.spec.js  SearchBar.spec.js  SearchResults.spec.js  search.store.spec.js
presentation/: slides-minimal.md  slides.html
presentation/diagrams/: pipeline-offline.mmd  runtime-flow.mmd  search-ladder.mmd  vocabulary-problem.mmd
test-harness/: evaluate.py  metrics.py  models.py  requirements.txt
test-harness/data/: corpus.json
test-harness/results/: report-2026-04-24.html  scores-2026-04-23.csv  scores-2026-04-24.csv
test-harness/tests/: test_metrics.py  test_models.py
(+31 files in other folders)
