[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autosearch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.scripts]
autosearch = "autosearch.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["autosearch*"]
